<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:id="@+id/tvScreen"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="end|bottom"
        android:textSize="48sp"
        android:padding="10dp"
        android:textColor="@color/white"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_7"
            android:textSize="35sp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickXml"
            />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_8"
            android:textSize="35dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickXml"
            />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_9"
            android:textSize="35dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickXml"
            />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/Divide"
            android:textSize="35dp"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickXml"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_4"
            android:textSize="35dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickXml"
            />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_5"
            android:textSize="35sp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickXml"
            />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_6"
            android:textSize="35sp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickXml"
            />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/multiply"
            android:textSize="35sp"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickXml"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_1"
            android:textSize="35sp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickXml"
            />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_2"
            android:textSize="35sp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickXml"
            />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_3"
            android:textSize="35sp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickXml"
            />

        <Button
            android:id="@+id/btnSub"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/Minus"
            android:textSize="35sp"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickXml"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/Zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_0"
            android:textSize="35sp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickXml"
            />

        <Button
            android:id="@+id/Dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/dot"
            android:textSize="35sp"
            android:onClick="onDecimal"
            tools:ignore="UsingOnClickXml"
            />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/Clear"
            android:textSize="25sp"
            android:onClick="onClear"
            tools:ignore="UsingOnClickXml"
            />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/Add"
            android:textSize="35sp"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickXml"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/Equals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/Equals"
            android:textSize="35sp"
            android:onClick="onEquals"
            tools:ignore="UsingOnClickXml"
            />

    </LinearLayout>

</LinearLayout>